# andromeda

./: .clangd  README.md  bootstrap.yml
patches/: autoconf.patch  binutils.patch  gcc.patch  gdb.patch
patches/mlibc/: 0001-Add-Andromeda-port.patch
patches/ncurses/: 0001-Add-Andromeda-support.patch
sources/andromeda-boot/: libboot.c  libboot.h  linux.c  linux.h  meson.build  utils.h
sources/andromeda-boot/include/: edid.h  libboot.h  utils.h
sources/andromeda-boot/libboot/: libboot.c  meson.build
sources/andromeda-boot/limine/: meson.build
sources/andromeda-boot/limine/include/: bootinfo.h
sources/andromeda-boot/limine/loader/: cpufeat.c  cpufeat.h  framebuffer.c  framebuffer.h  hhdm.c  hhdm.h  image-elf.c  image-elf.h  image.c  image.h  main.c  main.h  memmap.c  memmap.h  memory.h  meson.build  module.c  module.h  paging.c  paging.h  pathutil.c  pathutil.h  prekernel.S  requests.c  requests.h  rsdp.c  rsdp.h  util.h
sources/andromeda-boot/limine/prekernel/: acpi.c  acpi.h  asm.h  irq.c  irq.h  memory.c  memory.h  meson.build  prekernel.lds  smp.S  smp.c  smp.h  start.S  start.c  start.h  string.c
sources/andromeda-boot/linux/: linux.c  meson.build
sources/andromeda-filesystem/: .bash_profile  .bashrc  fstab  profile
sources/andromeda-init/: main.c  meson.build
sources/andromeda-kernel/: meson.build  meson.options
sources/andromeda-kernel/bcode/: bcode.lds  fat32.S  mbr.S  meson.build
sources/andromeda-kernel/kernel/: kernel.lds  klimits.h  meson.build  string.h
sources/andromeda-kernel/kernel/asm/: cr.h
sources/andromeda-kernel/kernel/cpu/: fpu.c  fpu.h  gdt.c  gdt.h  idt.S  idt.c  idt.h
sources/andromeda-kernel/kernel/drv/: biosdisk.c  biosdisk.h  console.c  console.h  cpu.S  cpu.c  cpu.h  device.c  device.h  idle.c  idle.h  loopback.c  loopback.h  mem.c  mem.h  partition.c  partition.h  vbe.c  vbe.h
sources/andromeda-kernel/kernel/drv/console/: console.c  keyboard.c  keyboard.h  scancode.h  screen.c  screen.h  vt.c  vt.h
sources/andromeda-kernel/kernel/fs/: detect.c  detect.h  fat.c  fat.h  fifo.c  fifo.h  iso9660.c  iso9660.h  pgcache.c  pgcache.h  ramfs.c  ramfs.h  vfs.c  vfs.h
sources/andromeda-kernel/kernel/info/: acpi.c  acpi.h  system.c  system.h
sources/andromeda-kernel/kernel/init/: bios.h  main.S  main.c
sources/andromeda-kernel/kernel/mem/: bootmem.c  bootmem.h  kmalloc.c  kmalloc.h  layout.h  memdetect.c  memdetect.h  pmap.c  pmap.h  pmem.c  pmem.h  usermem.S  usermem.h  vmalloc.c  vmem.c  vmem.h  vmm.c  vmm.h
sources/andromeda-kernel/kernel/proc/: exec.c  exec.h  process.c  process.h  sched.c  sched.h  signal.c  signal.h
sources/andromeda-kernel/kernel/sys/: fs.c  fs.h  memory.c  memory.h  misc.c  misc.h  process.c  process.h  sched.c  sched.h  syscall.c  syscall.h  system.c  system.h  thread.c  thread.h
sources/andromeda-kernel/kernel/util/: container.h  hash.h  list.h  panic.c  panic.h  print.c  print.h  reset.c  reset.h  string.c  time.h
sources/andromeda-util/: hexdump.c  kbmods.c  meson.build  mount.c  reboot.c  umount.c  vidmode.c
support/: clangd.sh  dev-setup.sh  gdb.sh  mkimg.sh  mkinitrd.sh  qemu-debug.sh  rebuild.sh  switch.sh
support/autoconf/: regenerate.sh
support/cross/: meson.sh
support/qemu/: kvm.sh  tcg.sh
